# sed-SeisComP-contributions

./: CMakeLists.txt
apps/: CMakeLists.txt
apps/scenvelope/: CMakeLists.txt  app.cpp  app.h  butterworth_c.c  butterworth_c.h  envelope.cpp  envelope.h  filter.cpp  filter.h  main.cpp  processor.cpp  processor.h  test.cpp  util.cpp  util.h
apps/scenvelope/config/: scenvelope.cfg
apps/scenvelope/descriptions/: scenvelope.rst  scenvelope.xml
apps/scorg2nll/: main.cpp
apps/screloc/: CMakeLists.txt  main.cpp
apps/screloc/config/: screloc.cfg
apps/screloc/descriptions/: screloc.rst  screloc.xml
apps/scsmdump/: CMakeLists.txt  app.cpp  app.h  main.cpp
apps/scsmdump/descriptions/: scsmdump.rst  scsmdump.xml
apps/scvsmag/: scvsmaglog.py  ud_defaults.py  ud_interface.py
apps/scvsmag/config/: sc3ml_0.7__quakeml_1.2-RT_eewd.xsl  sc3ml_0.7__shakealert.xsl
apps/scvsmag/descriptions/: VS.rst  scvsmag.rst  scvsmag.xml  scvsmaglog.rst  scvsmaglog.xml
apps/scwfparam/: CMakeLists.txt  app.cpp  app.h  main.cpp  msg.cpp  msg.h  util.cpp  util.h  wfparam.cpp  wfparam.h
apps/scwfparam/config/: scwfparam.cfg
apps/scwfparam/descriptions/: scwfparam.rst  scwfparam.xml
apps/scwfparam/processors/: pgav.cpp  pgav.h
libs/: CMakeLists.txt
libs/seiscomp/datamodel/: CMakeLists.txt
libs/swig/: CMakeLists.txt  create-wrapper.sh  strongmotion.i  strongmotion.py  strongmotionPYTHON_wrap.cxx  strongmotionPYTHON_wrap.h
plugins/: CMakeLists.txt
plugins/locator/nll/: CMakeLists.txt  nll_locator.cpp  nll_locator.h
plugins/magnitudes/MLh/: ml.cpp  ml.h
(+43 files in other folders)
