SET(SMDUMP_TARGET scsmdump)

SET(
	SMDUMP_SOURCES
		app.cpp
		main.cpp
)

INCLUDE_DIRECTORIES(.)
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})

SC_ADD_EXECUTABLE(SMDUMP ${SMDUMP_TARGET})
SC_LINK_LIBRARIES_INTERNAL(${SMDUMP_TARGET} client datamodel_sm)
SC_INSTALL_INIT(${SMDUMP_TARGET} ${INIT_TEMPLATE})

FILE(GLOB descs "${CMAKE_CURRENT_SOURCE_DIR}/descriptions/*.xml")
INSTALL(FILES ${descs} DESTINATION ${SC3_PACKAGE_APP_DESC_DIR})
